The Sith Order/desktop.css
/* ... */
form fieldset .listbox .many li {
    margin: 0.5em 0.75em 0 0;
}

form fieldset .listbox .many label {
    background: #fadd2b;
    color: #000;
    margin: 0;
    line-height: 1.2em;
    padding: 0.35em 0.5em;
}

form fieldset .listbox .many label:is(:hover, :focus) {
    background: #fff;
}

form fieldset .listbox .many label>[type="checkbox"] {
    margin-right: 0.5em !important;
}

form .actions:has(.hidden:only-child, a:only-child) {
    padding: 0.5em 0 1em;
    margin: 0;
}

fieldset fieldset,
fieldset dl dl,
form blockquote.userstuff {
    background: #330000;
}

.datetime:has(select) {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

.datetime select:only-child {
    width: 100%;
}

form p,
form p.note {
    padding-inline: 0;
}

form p:has(input.number) {
    padding: 0;
}

form dd.complex {
    line-height: 2;
}

form dd.complex input[type="checkbox"] {
    margin-left: 0.4em !important;
}

form dd input[type=checkbox][value="1"]:first-child {
    margin-left: 0
}

form dd input[type="checkbox"][value="1"] {
    margin-right: 0.5em !important;
}

#co-authors-options {
    margin-top: 1em
}

div.dynamic {
    background: 0;
    margin: 1em;
}

div.dynamic>.comment {
    margin: 0;
    padding: 0;
    border: 0;
    background: none;
}

div.dynamic .heading {
    line-height: 1.75;
}

.toggled form,
.dynamic form {
    background: none;
    padding: 0 .25em;
    border: none;
    border-radius: 1rem;
    box-shadow: none;
}

.toggled form p.footnote,
.dynamic form p.footnote {
    margin-bottom: 1em;
}

.dynamic form[action*="/bookmarks"]>fieldset {
    margin-top: 0 !important;
}

#modal {
    background: #330000;
    border: 1px solid #ff6666;
    border-image: url("https://squidgeimages.s3.us-west-002.backblazeb2.com/2026/03/05/saber-red.png");
    border-image-slice: 200;
    border-image-width: 30px;
    border-image-outset: 15px;
    box-shadow: none;
}

#modal .content {
    border-color: #b2b2b2;
}

#modal.img .content img {
    box-shadow: none;
}

#modal .footer {
    background: #000;
}

fieldset.creatorships {
    background: none;
    border: 0;
    font-size: 0.75rem;
    word-break: initial;
}

.toggled form p.footnote,
.dynamic form p.footnote {
    line-height: 1.25;
}

.ui-draggable a {
    cursor: pointer;
}

/* || 8 -- ACTIONS (BUTTONS) */
.actions a,
.actions a:link,
.actions a:visited,
.action,
.action:link,
.action:visited,
.actions button,
.actions input,
input[type="submit"],
input[type=button],
button,
.current,
.actions label,
.series a.previous,
.series a.next {
    background: #fadd2b;
    background-image: none;
    color: #000;
    padding: 0.25em 0.75em;
    font-size: 0.875rem;
    height: unset;
    line-height: 1.3;
    border-color: #0000;
    border-radius: 0.25rem;
    box-shadow: none;
    transition-property: background, color;
    transition-duration: 150ms;
    cursor: pointer;
}

.actions label.disabled {
    background: #fadd2b;
}

.actions label:has(> select) {
    padding: 0.25em;
}

.actions li a,
.actions li button,
.actions li input,
.actions li input[type="submit"],
.actions li .current,
.actions li label,
.javascript .work.navigation .secondary input {
    margin: 0.25em 0.1em;
}

ul.actions {
    padding: 0;
}

.blurb ul.actions {
    text-align: right;
}

ul.actions:has(+ .listbox, + .notice, + .notes, + .caution, + .error, + .alert, + .flash) {
    margin-bottom: 1em;
}

.module:not(.header) ul.actions {
    float: left;
    text-align: right;
}

.bookmark.blurb .module:not(.header) ul.actions {
    float: none;
    text-align: left
}

h2.heading+.navigation.actions {
    margin-block: 0.5em;
}

input[type="text"],
input[type="password"] {
    padding-inline: 0.5em;
}

input[type="password"] {
    box-sizing: border-box;
}

.actions.sorting a,
.actions.sorting a:link,
.actions.sorting a:visited {
    line-height: 1.4;
}

.actions.sorting,
.actions.view {
    margin: 0.5em 0.25em;
}

.actions:has(+ form) {
    margin-bottom: 1em;
}

form.ajax-remove {
    display: inline-block;
}

#inner .filters .actions input[type="submit"] {
    line-height: 1.4;
}

.actions a:is(:hover, :focus),
.actions button:is(:hover, :focus),
label.action:is(:hover, :focus),
.action:is(:hover, :focus),
input[type="submit"]:is(:hover, :focus),
input[type=button]:is(:hover, :focus),
button:is(:hover, :focus),
.series a.previous:is(:hover, :focus),
.series a.next:is(:hover, :focus) {
    background: #fff;
    color: #000;
    box-shadow: none;
    border-color: #0000;
}

.actions:has(label > select) label,
.actions:has(label > select) a {
    height: unset !important;
    line-height: 1.9em !important;
}

dl.stats+.landmark+.actions,
.mystery .summary+.landmark+.actions {
    margin: 0 auto 0 0;
}

.pagination {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.pagination li {
    margin: 0.25em 0.5em;
}

.pagination :where(.previous, .next) :where(span, a) {
    display: block;
    height: 1.5em;
}

.pagination :where(.previous, .next) span {
    padding: .25em;
}

.pagination span,
.pagination a,
.actions .chapter a,
.series a.previous,
.series a.next,
.chapters-show #feedback .actions a[href*="/works/"] {
    height: 1.3em !important;
}

.pagination .previous span,
.pagination .next span {
    display: none
}

.pagination .previous a,
.actions .chapter.previous a,
.series a.previous,
#main.chapters-show .work:has(.actions .previous)+#feedback .actions li:nth-child(1 of :has(a[href*="/works/"])) a {
    content: url("https://squidgeimages.s3.us-west-002.backblazeb2.com/2026/03/05/left_dark.png");
}
/* ... */

